x86/include/TestEngine.h


TESTENGINE_API(int32) hciSetConnectionEncryption(uint32 handle, uint16 connHandle,
                                                 uint8 enable);
TESTENGINE_API(int32) hciLeReadLocalSupportedFeatures(uint32 handle,
                                                      uint64* leFeatures);
TESTENGINE_API(int32) hciLeTestEnd(uint32 handle, uint16* numPackets);
TESTENGINE_API(int32) hciLeEnhancedReceiverTest(uint32 handle, uint8 channel,
                                                uint8 phy, uint8 modIndex);
TESTENGINE_API(int32) hciLeEnhancedTransmitterTest(uint32 handle, uint8 channel,
                                                   uint8 dataLength,
                                                   uint8 payloadType, uint8 phy);
TESTENGINE_API(int32) vmWrite(uint32 handle, const uint16 data[]);
TESTENGINE_API(int32) vmRead(uint32 handle, uint16 data[], uint16 timeout);
TESTENGINE_API(int32) bccmdSetSingleChan(uint32 handle, uint16 channel);
TESTENGINE_API(int32) bccmdSetHoppingOn(uint32 handle);
TESTENGINE_API(int32) bccmdFmSwitchPower(uint32 handle, uint8 powerOn);
TESTENGINE_API(int32) bccmdFmSetFreq(uint32 handle, uint32 freqKHz);
TESTENGINE_API(int32) bccmdFmGetRssi(uint32 handle, int8* rssi);
TESTENGINE_API(int32) bccmdFmGetSnr(uint32 handle, int16* snr);
TESTENGINE_API(int32) bccmdFmGetIfOffset(uint32 handle, int16* offset);
TESTENGINE_API(int32) bccmdFmGetStatus(uint32 handle, uint8* status);
TESTENGINE_API(int32) bccmdFmSetupAudio(uint32 handle, uint8 route, uint8 gain,
                                        uint8 channel);
TESTENGINE_API(int32) bccmdFmVerifyRDSPi(uint32 handle, uint16 pi, uint16 timeoutMs,
                                         uint8* matched);
TESTENGINE_API(int32) bccmdFmTxSwitchPower(uint32 handle, uint8 powerOn);
TESTENGINE_API(int32) bccmdFmTxSetFreq(uint32 handle, uint32 freqKHz);
TESTENGINE_API(int32) bccmdFmTxSetPowerLevel(uint32 handle, int16 powerLevel);
TESTENGINE_API(int32) bccmdFmTxSetupAudio(uint32 handle, uint8 route,
                                          uint16 audioGain);
TESTENGINE_API(int32) bccmdDisconnectAudio(uint32 handle);
TESTENGINE_API(int32) bccmdAudioGetSource(uint32 handle, uint16 device, uint16 iface,
                                          uint16 channel, uint16* sid);
TESTENGINE_API(int32) bccmdAudioGetSink(uint32 handle, uint16 device, uint16 iface,
                                        uint16 channel, uint16* sid);
TESTENGINE_API(int32) bccmdAudioConfigure(uint32 handle, uint16 sid, uint16 key,
                                          uint32 value);
TESTENGINE_API(int32) bccmdDirectChargerPsuTrim(uint32 handle, uint16 trim);
TESTENGINE_API(int32) teSupportsHq(uint32 handle, uint8* hqSupported);
TESTENGINE_API(int32) bccmdSetAuxDac(uint32 handle, uint8 enable, uint8 level);
TESTENGINE_API(int32) bccmdSetMicBiasIf(uint32 handle, uint8 instance, uint8 enable,
                                        uint8 voltage);
TESTENGINE_API(int32) bccmdSetMicBias(uint32 handle, uint8 enable, uint8 voltage,
                                      uint8 current, uint8 enableLowPowerMode);
TESTENGINE_API(int32) teGetAvailableDebugPorts(uint16* maxLen, char* ports,
                                               char* trans, uint16* count);
TESTENGINE_API(int32) teGetAvailableDebugPortsEx(uint32 criteria, uint16* maxLen,
                                                 char* ports, char* trans,
                                                 uint16* count);
TESTENGINE_API(int32) bccmdProvokeFault(uint32 handle, uint16 faultCode);
TESTENGINE_API(int32) hqGetFaultReports(uint32 handle, uint16 maxReports,
                                        uint16 codes[], uint32 timestamps[],
                                        uint16 repeats[], uint16* numReports,
                                        int32 timeout);
TESTENGINE_API(int32) teGetFaultDesc(uint32 handle, uint16 faultCode, char* desc);
TESTENGINE_API(int32) bccmdSetMapScoPcm(uint32 handle, uint8 enable);
TESTENGINE_API(int32) bccmdGetVrefConstant(uint32 handle, uint16* vref);
TESTENGINE_API(int32) bccmdGetVrefAdc(uint32 handle, uint16* result, uint8* numBits);
TESTENGINE_API(int32) bccmdBC5FMGetI2CState(uint32 handle, uint8* sda, uint8* scl);
TESTENGINE_API(int32) refEpGetRssiDbm(uint32 handle, uint16 freqMHz, float64 rssiChip,
                                      float64* rssiDbm);
TESTENGINE_API(int32) refEpGetPaLevel(uint32 handle, uint16 freqMHz,
                                      float64 targetPowerDbm, uint16* intPa,
                                      float64* powerDbm);
TESTENGINE_API(int32) refEpWriteCalDataFile(uint32 handle, const char* filePath);
TESTENGINE_API(int32) refEpLoadCalDataFile(uint32 handle, const char* filePath);
TESTENGINE_API(int32) bccmdGetVmStatus(uint32 handle, uint16* status,
                                       uint16* exitCode);
TESTENGINE_API(int32) bccmdI2CTransfer(uint32 handle, uint16 slaveAddr,
                                       uint16 txOctets, uint16 rxOctets,
                                       uint8 restart, uint8 data[], uint16* octets);
TESTENGINE_API(int32) radiotestBle(uint32 handle, uint16 command, uint8 channel,
                                   uint8 txLength, uint8 txPayload);
TESTENGINE_API(int32) hqGetBleRxPktCount(uint32 handle, int32 timeout,
                                         uint16* pktCount);
TESTENGINE_API(int32) bccmdGetChargerTrims(uint32 handle, uint16* chgRefTrim,
                                           uint16* hVrefTrim, uint16* rTrim,
                                           uint16* iTrim, uint16* iExtTrim,
                                           uint16* iTermTrim, uint16* vFastTrim,
                                           uint16* hystTrim);