x86/include/TestEngineAPI.cs


        [DllImport("TestEngine.dll", EntryPoint="hciSetConnectionEncryption",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciSetConnectionEncryption(uint handle, ushort connHandle, byte enable);

        [DllImport("TestEngine.dll", EntryPoint="hciLeReadLocalSupportedFeatures",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciLeReadLocalSupportedFeatures(uint handle, out ulong leFeatures);

        [DllImport("TestEngine.dll", EntryPoint="hciLeTestEnd",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciLeTestEnd(uint handle, out ushort numPackets);

        [DllImport("TestEngine.dll", EntryPoint="hciLeEnhancedReceiverTest",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciLeEnhancedReceiverTest(uint handle, byte channel, byte phy, byte modIndex);

        [DllImport("TestEngine.dll", EntryPoint="hciLeEnhancedTransmitterTest",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciLeEnhancedTransmitterTest(uint handle, byte channel, byte dataLength, byte payloadType, byte phy);

        [DllImport("TestEngine.dll", EntryPoint="vmWrite",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int vmWrite(uint handle, ushort [] data);

        [DllImport("TestEngine.dll", EntryPoint="vmRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int vmRead(uint handle, ushort [] data, ushort timeout);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetSingleChan",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetSingleChan(uint handle, ushort channel);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetHoppingOn",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetHoppingOn(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmSwitchPower",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmSwitchPower(uint handle, byte powerOn);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmSetFreq",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmSetFreq(uint handle, uint freqKHz);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmGetRssi",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmGetRssi(uint handle, out sbyte rssi);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmGetSnr",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmGetSnr(uint handle, out short snr);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmGetIfOffset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmGetIfOffset(uint handle, out short offset);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmGetStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmGetStatus(uint handle, out byte status);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmSetupAudio",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmSetupAudio(uint handle, byte route, byte gain, byte channel);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmVerifyRDSPi",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmVerifyRDSPi(uint handle, ushort pi, ushort timeoutMs, out byte matched);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmTxSwitchPower",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmTxSwitchPower(uint handle, byte powerOn);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmTxSetFreq",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmTxSetFreq(uint handle, uint freqKHz);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmTxSetPowerLevel",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmTxSetPowerLevel(uint handle, short powerLevel);

        [DllImport("TestEngine.dll", EntryPoint="bccmdFmTxSetupAudio",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdFmTxSetupAudio(uint handle, byte route, ushort audioGain);

        [DllImport("TestEngine.dll", EntryPoint="bccmdDisconnectAudio",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdDisconnectAudio(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="bccmdAudioGetSource",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdAudioGetSource(uint handle, ushort device, ushort iface, ushort channel, out ushort sid);

        [DllImport("TestEngine.dll", EntryPoint="bccmdAudioGetSink",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdAudioGetSink(uint handle, ushort device, ushort iface, ushort channel, out ushort sid);

        [DllImport("TestEngine.dll", EntryPoint="bccmdAudioConfigure",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdAudioConfigure(uint handle, ushort sid, ushort key, uint value);

        [DllImport("TestEngine.dll", EntryPoint="bccmdDirectChargerPsuTrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdDirectChargerPsuTrim(uint handle, ushort trim);

        [DllImport("TestEngine.dll", EntryPoint="teSupportsHq",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teSupportsHq(uint handle, out byte hqSupported);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetAuxDac",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetAuxDac(uint handle, byte enable, byte level);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetMicBiasIf",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetMicBiasIf(uint handle, byte instance, byte enable, byte voltage);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetMicBias",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetMicBias(uint handle, byte enable, byte voltage, byte current, byte enableLowPowerMode);

        [DllImport("TestEngine.dll", EntryPoint="teGetAvailableDebugPorts",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetAvailableDebugPorts(out ushort maxLen, StringBuilder ports, StringBuilder trans, out ushort count);

        [DllImport("TestEngine.dll", EntryPoint="teGetAvailableDebugPortsEx",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetAvailableDebugPortsEx(uint criteria, out ushort maxLen, StringBuilder ports, StringBuilder trans, out ushort count);

        [DllImport("TestEngine.dll", EntryPoint="bccmdProvokeFault",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdProvokeFault(uint handle, ushort faultCode);

        [DllImport("TestEngine.dll", EntryPoint="hqGetFaultReports",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hqGetFaultReports(uint handle, ushort maxReports, ushort [] codes, uint [] timestamps, ushort [] repeats, out ushort numReports, int timeout);

        [DllImport("TestEngine.dll", EntryPoint="teGetFaultDesc",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetFaultDesc(uint handle, ushort faultCode, StringBuilder desc);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetMapScoPcm",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetMapScoPcm(uint handle, byte enable);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetVrefConstant",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetVrefConstant(uint handle, out ushort vref);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetVrefAdc",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetVrefAdc(uint handle, out ushort result, out byte numBits);

        [DllImport("TestEngine.dll", EntryPoint="bccmdBC5FMGetI2CState",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdBC5FMGetI2CState(uint handle, out byte sda, out byte scl);

        [DllImport("TestEngine.dll", EntryPoint="refEpGetRssiDbm",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int refEpGetRssiDbm(uint handle, ushort freqMHz, double rssiChip, out double rssiDbm);

        [DllImport("TestEngine.dll", EntryPoint="refEpGetPaLevel",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int refEpGetPaLevel(uint handle, ushort freqMHz, double targetPowerDbm, out ushort intPa, out double powerDbm);

        [DllImport("TestEngine.dll", EntryPoint="refEpWriteCalDataFile",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int refEpWriteCalDataFile(uint handle, String filePath);

        [DllImport("TestEngine.dll", EntryPoint="refEpLoadCalDataFile",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int refEpLoadCalDataFile(uint handle, String filePath);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetVmStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetVmStatus(uint handle, out ushort status, out ushort exitCode);

        [DllImport("TestEngine.dll", EntryPoint="bccmdI2CTransfer",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdI2CTransfer(uint handle, ushort slaveAddr, ushort txOctets, ushort rxOctets, byte restart, byte [] data, out ushort octets);

        [DllImport("TestEngine.dll", EntryPoint="radiotestBle",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int radiotestBle(uint handle, ushort command, byte channel, byte txLength, byte txPayload);

        [DllImport("TestEngine.dll", EntryPoint="hqGetBleRxPktCount",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hqGetBleRxPktCount(uint handle, int timeout, out ushort pktCount);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetChargerTrims",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetChargerTrims(uint handle, out ushort chgRefTrim, out ushort hVrefTrim, out ushort rTrim, out ushort iTrim, out ushort iExtTrim, out ushort iTermTrim, out ushort vFastTrim, out ushort hystTrim);
